# gametime

./: .dockerignore  .gitignore  Dockerfile  README.md  STANDARDS.md  agents.md  docker-compose.yml  fly.toml  orchestrator-prompt.md  pyproject.toml
config/: cloudflared.yml.example
configs/: default.yaml  mlb.yaml  wnba.yaml
docs/: deploy-local-tunnel.md  deploy.md  mlb_ensemble_research_backlog.md  mlb_ensemble_roadmap.md  mlb_pregame_ops.md
scripts/: apply_w6m_h2h.py  cloudflared-run.sh.example  local-api-up.sh  run_pipeline.sh
subagent-prompts/: README.md  TASK-13-AGENT_DATA.md  TASK-21-AGENT_INFRA.md  TASK-23-AGENT_FRONTEND.md  TASK-24-AGENT_FRONTEND.md  TASK-25-AGENT_FRONTEND.md  TASK-26-AGENT_DESIGN.md  TASK-27-AGENT_CONTENT.md  TASK-28-AGENT_INFRA.md  TASK-29-AGENT_INFRA.md  TASK-30-AGENT_INFRA.md  TASK-31-AGENT_QA.md  TASK-32-AGENT_INFRA.md  TASK-33-AGENT_BACKEND.md  TASK-34-AGENT_BACKEND.md  TASK-35-AGENT_DATA.md  TASK-36-AGENT_INFRA.md
tests/: test_api_predictions.py  test_baseball_ensemble.py  test_baseball_total_calibration.py  test_cli_slate_precision.py  test_confidence.py  test_config_paths.py  test_game_meta.py  test_game_timeline.py  test_live_prior.py  test_mlb_ingest_daily.py  test_mlb_probables.py  test_mlb_refresh_ops.py  test_mlb_sidecar_backfill.py  test_mlb_slate_backtest.py  test_mlb_slate_schedule.py  test_mlb_sp_live_fip.py  test_mlb_statsapi_games.py  test_nbastatsv3.py  test_pace.py  test_pregame_calibration.py  test_pregame_join.py  test_q4_pace.py  test_report_path.py  test_sports.py  test_team_context.py  test_wnba_pbp.py
(+155 files in other folders)
